--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,12 @@
+
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 60px; /* Height of the footer */
+}
+
 .fa-search {
 	position: absolute;
 	margin-top: 7%;
@@ -9,28 +18,26 @@
 .fa-expand-arrows-alt {
 	color: black;
 	margin-left: 5px;
-	font-size: 15px;
-	cursor: pointer; 
+	font-size: 25px;
+	cursor: pointer;
 }
 
 .fa-expand-arrows-alt:hover {
-	font-size: 20px;
+	font-size: 26px;
 	color: grey;
 }
-
 
 .fa-minus-square {
 	color: black;
 	margin-left: 5px;
-	font-size: 15px;
-	cursor: pointer; 
+	font-size: 25px;
+	cursor: pointer;
 }
 
 .fa-minus-square:hover {
-	font-size: 20px;
+	font-size: 26px;
 	color: grey;
 }
-
 
 .searchInput {
 	border-box: box-sizing;
@@ -41,6 +48,7 @@
 	border: none;
 	border-bottom: 1px solid #ddd;
 }
+
 
 ul.dropdown-menu.show {
 	padding-top: 0;
@@ -64,14 +72,3 @@ button.btn.btn-primary.float-right {
 	font-weight: bold;
 }
 
-.breadcrumb {
-	padding: 8px 15px;
-	margin-bottom: 20px;
-	margin-top: 20px;
-	list-style: none;
-	background-color: #0000;
-	border-radius: 4px;
-	padding-left: 50px;
-	float: left;
-	font-size: 22px;
-}
