--- a/src/main/resources/templates/links-diffs.html
+++ b/src/main/resources/templates/links-diffs.html
@@ -7,20 +7,27 @@
 	href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
 	integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
 	crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css"
+<link rel="stylesheet" type="text/css"
 	href="/css/bootstrap/bootstrap.min.css"></link>
-	
+
 <script src="/js/jquery-3.3.1.min.js"></script>
 <script src="/js/bootstrap/popper.min.js"></script>
 <script src="/js/bootstrap/bootstrap.min.js"></script>
 <script src="/js/diff2html.min.js"></script>
 <script src="/js/diff2html-ui.min.js"></script>
 
-
+<link rel="stylesheet" type="text/css"
+	href="/css/main.css"></link>
 
 </head>
 <body>
-
+	<nav aria-label="breadcrumb">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="/">Sankey Diagram</a></li>
+			<li class="breadcrumb-item active" aria-current="page"><span
+				th:text="'Customizations of ' + ${linkNodes}"></span></li>
+		</ol>
+	</nav>
 	<div class="container">
 
 		<div id="accordion">
@@ -30,7 +37,7 @@
 						<button class="btn btn-link" data-toggle="collapse"
 							th:data-target="'#collapse'+${iter.index}" aria-expanded="true"
 							th:aria-controls="'collapse'+${iter.index}" th:inline="text">
-							FILE: [[${#strings.capitalize(customization.capath)}]]<i
+							FILE: [[${#strings.capitalize(customization.capath)}]] - VP Expr: [[${customization.expression}]]<i
 								class="fas fa-caret-down"></i>
 						</button>
 					</h5>
@@ -44,6 +51,15 @@
 			</div>
 		</div>
 	</div>
+	<footer class="footer">
+		<div class="container">
+			<span class="text-muted"> <img src="/images/onekinLogo.png"
+				alt="Logo" style="width: 150px; height: 70px;"> Contact:
+				oscar.diaz@ehu.eus, leticia.montalvillo@ehu.eus </img>
+			</span>
+
+		</div>
+	</footer>
 
 	<script th:inline="javascript">
 			/*<![CDATA[*/
