--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,5 +1,3 @@
-
-
 .footer {
 	position: absolute;
 	bottom: 0;
@@ -49,7 +47,6 @@
 	border-bottom: 1px solid #ddd;
 }
 
-
 ul.dropdown-menu.show {
 	padding-top: 0;
 }
@@ -72,3 +69,20 @@ button.btn.btn-primary.float-right {
 	font-weight: bold;
 }
 
+ul#analysisConfigDropdown {
+	width: 100%;
+	padding-left: 3%;
+}
+
+.fa-save {
+	margin-left: 5%;
+}
+
+.fa-folder-open {
+	margin-left: 5%;
+}
+
+.list-group.config-options {
+	overflow-y: scroll;
+	max-height: 197px;
+}
