--- a/src/main/resources/templates/node-diffs.html
+++ b/src/main/resources/templates/node-diffs.html
@@ -16,21 +16,34 @@
 <script src="/js/diff2html.min.js"></script>
 <script src="/js/diff2html-ui.min.js"></script>
 
-<link rel="stylesheet" type="text/css"
-	href="/css/main.css"></link>
+<link rel="stylesheet" type="text/css" href="/css/main.css"></link>
 
 </head>
 <body>
+	<header class="navbar navbar-light bg-faded">
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<a href="/"><img src="/images/customDiffLogo.png"></a>
+				</div>
+
+				<!-- Collect the nav links, forms, and other content for toggling -->
+
+				<!-- /.navbar-collapse -->
+			</div>
+			<!-- /.container-fluid -->
+		</nav>
+	</header>
 
 
-
-	<nav aria-label="breadcrumb">
+	<div aria-label="breadcrumb">
 		<ol class="breadcrumb">
 			<li class="breadcrumb-item"><a href="/">Sankey Diagram</a></li>
 			<li class="breadcrumb-item active" aria-current="page"><span
 				th:text="'Customizations of ' + ${nodeType} +': '+${nodeName}"></span></li>
 		</ol>
-	</nav>
+	</div>
 
 	<div class="container">
 
@@ -43,8 +56,8 @@
 							th:data-target="'#collapse'+${iter.index}" aria-expanded="true"
 							th:aria-controls="'collapse'+${iter.index}" th:inline="text">
 							FILE: [[${#strings.capitalize(customization.capath)}]] - FEATURE:
-							[[${#strings.capitalize(customization.idfeature)}]] - VP Expr: [[${customization.expression}]]<i
-								class="fas fa-caret-down"></i>
+							[[${#strings.capitalize(customization.idfeature)}]] - VP Expr:
+							[[${customization.expression}]]<i class="fas fa-caret-down"></i>
 						</button>
 					</h5>
 				</div>
@@ -61,8 +74,8 @@
 	<footer class="footer">
 		<div class="container">
 			<span class="text-muted"> <img src="/images/onekinLogo.png"
-				alt="Logo" style="width: 150px; height: 70px;"> Contact:
-				oscar.diaz@ehu.eus, leticia.montalvillo@ehu.eus </img>
+				alt="Logo" style="width: 110px; height: 60px;"> Contact:
+				oscar.diaz@ehu.eus, raul.medeiros@ehu.eus </img>
 			</span>
 
 		</div>
